--- a/templates/ui.html
+++ b/templates/ui.html
@@ -29,7 +29,7 @@
 
             <script src="{{ url_for('static', filename='src/ui.js') }}"></script>
             <hr><br><br>
-            <button id="submit">Submit</button>
+            <button onclick="insertIntoDB()" id="submit">Submit</button>
 
         </div>
     </div>
